--- a/css/style.css
+++ b/css/style.css
@@ -116,14 +116,95 @@ section {
 
 /* seconda sezione */
 
+#seconda {
+  background-color: rgb(244, 249, 253);
+}
+
 #cubo {
-  height: 50px;
-  background-color: green;
+  text-align: center;
+  margin-top: 50px;
+}
+
+#cubo img {
+  width: 300px;
+  height: auto;
+}
+
+#cubo p:first-of-type {
+  font-weight: bolder;
+  font-size: 30px;
+  color: rgb(51, 71, 91);
+}
+
+#cubo p:nth-of-type(2) {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  /* font-weight: bolder; */
+  font-size: 12px;
+  color: rgb(82, 96, 113);
 }
 
 #freehubspot {
-  height: 50px;
-  background-color: lightgreen;
+  width: 100%;
+  background-color: white;
+  border: 1px solid rgb(240, 240, 240);
+  border-radius: 4px;
+  background-color: white;
+}
+
+#primofloatsecondasez {
+  width: 80%;
+  margin: 50px auto;
+  border: 1px solid rgb(240, 240, 240);
+}
+
+#libro {
+  float: left;
+  width: 150px;
+  text-align: center;
+}
+
+#libro img {
+  width: 100%;
+  height: auto;
+}
+
+#linksecondasez {
+  background-color: rgb(254, 119, 90);
+  width: 150px;
+  height: 40px;
+  border-radius: 4px;
+  margin-top: 10px;
+}
+
+#linksecondasez a{
+  text-decoration: none;
+}
+
+#linksecondasez span{
+  color: white;
+  font-size: 9px;
+  line-height: 40px;
+}
+
+#testofreehub {
+  float: right;
+  width: calc(100% - 150px)
+  
+}
+
+#testofreehub p:first-of-type {
+  font-weight: bolder;
+  font-size: 30px;
+  color: rgb(51, 71, 91);
+}
+
+#testofreehub p:nth-of-type(2) {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  /* font-weight: bolder; */
+  font-size: 12px;
+  color: rgb(82, 96, 113);
 }
 
 .floatsecondasez {
