--- a/css/style.css
+++ b/css/style.css
@@ -282,8 +282,16 @@ hr {
 /* terza sezione */
 
 #testoterzasez {
-  height: 50px;
-  background-color: blue;
+  color: white;
+  text-align: center;
+}
+
+#testoterzasez p:nth-of-type(1) {
+  font-size: 30px;
+}
+
+#testoterzasez p:nth-of-type(2) {
+  font-size: 12px;
 }
 
 .riquadro {
